till page event using size half done
