# src/app/invoices/models/invoice.ts
@@ -7,3 +7,10 @@ export class Invoice {
     tax:number;
     rate:number;
 }
+export class InvoicePaginationRsp{
+    docs:Invoice[];
+    total:number;
+    pages:number;
+    page:number;
+    limit:number;
+}
